syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.itmo.mrdvd";
option java_outer_classname = "CommonMessageProto";

message AuthID {
  optional string token = 1;
}